[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/start_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/screen.gd" type="Script" id=2]
[ext_resource path="res://assets/large_font.tres" type="DynamicFont" id=3]

[node name="Screen" type="CanvasLayer"]
script = ExtResource( 2 )
intro_text = "Unexpected
Item in the
Bagatelle
Arena"
instructions = "Press Enter
or click
Launcher to
launch ball"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
margin_left = 32.0
margin_top = 64.0
margin_right = -32.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 48.0
color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Control"]
modulate = Color( 0, 1, 0.25098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" parent="." instance=ExtResource( 1 )]
margin_left = -96.0
margin_top = -128.0
margin_right = 104.0
margin_bottom = -28.0

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
